--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
-    "name": "collabmed/users",
+    "name": "collabmed/users-module",
     "description": "The user module is responsible for managing users and permissions.",
     "license": "proprietary",
-    "type": "dervis-module",
+    "type": "asgard-module",
     "homepage": "http://www.collabmed.com",
-    "authors": {
-        "name": "Samuel Odhiambo Okoth",
-        "email": "sodhiambo@collabmed.com",
-        "role": "developer"
-    },
+    "authors": [
+        {
+            "name": "Samuel Odhiambo Okoth",
+            "email": "sodhiambo@collabmed.com",
+            "role": "developer"
+        }
+    ],
     "require": {
         "php": ">=5.6.4",
         "composer/installers": "~1.0"
@@ -23,8 +25,5 @@
         "psr-4": {
             "Ignite\\Users\\": ""
         }
-    },
-    "extra": {
-        "installer-name": "Users"
     }
 }
