--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "php": ">=5.6.4",
         "composer/installers": "~1.0",
+        "cartalyst/sentinel": "2.0.*",
         "collabmed/core-module": "dev-master"
     },
     "authors": [
