--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": ">=5.6.4",
         "composer/installers": "~1.0",
         "cartalyst/sentinel": "2.0.*",
-        "collabmed/core-module": "dev-master"
+        "collabmed/core-module": "1.0.*"
     },
     "authors": [
         {
